--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
     "pinia": "^2.0.36",
     "vue": "^3.3.2",
